Fooled around with the CSS and got snagged by a sass whitespace compiler error. Going to have to get that fixed before I can go much further.

--- a/styles.sass
+++ b/styles.sass
@@ -143,7 +143,8 @@ wrapper
 	width: 100%
 	
 header
-	display: block
+        display: flex
+        justify-content: space-between
 	float: left
 	width: 100%
 	height: 100%
@@ -155,6 +156,10 @@ header
 		&:hover
 			color: #9bdb5c
 	
+        .square
+                background-color: black
+                height: 200px
+                width: 200px
 	.whitefix
 		background-color: white
 		opacity: .25
